[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Texturas/Inimigos/Morcego/SNES - Aero the Acro-Bat - Aero (1).png" type="Texture" id=1]
[ext_resource path="res://src/scripts/Inimigos/Morcego.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 7, 18 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 178.5, 126.5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 12.5, 12 )

[node name="Morcego" type="Node2D"]

[node name="Morcego" type="KinematicBody2D" parent="."]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Morcego"]
texture = ExtResource( 1 )
flip_h = true
region_enabled = true
region_rect = Rect2( 248, 13, 23, 40 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Morcego"]
shape = SubResource( 1 )

[node name="Zona de Ataque" type="Area2D" parent="Morcego"]
position = Vector2( 0, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Morcego/Zona de Ataque"]
position = Vector2( 1, 48.5 )
shape = SubResource( 2 )

[node name="Atacou Player" type="Area2D" parent="Morcego"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Morcego/Atacou Player"]
position = Vector2( 0.5, 12 )
shape = SubResource( 3 )

[connection signal="body_entered" from="Morcego/Zona de Ataque" to="Morcego" method="_on_Zona_de_Ataque_body_entered"]
[connection signal="body_exited" from="Morcego/Zona de Ataque" to="Morcego" method="_on_Zona_de_Ataque_body_exited"]
[connection signal="body_entered" from="Morcego/Atacou Player" to="Morcego" method="_on_Encostou_Player_body_entered"]
